--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -49,8 +49,12 @@ frame-system-benchmarking = {version = "4.0.0-dev", default-features = false, gi
 hex-literal = {version = "0.3.4", optional = true}
 
 # Local Dependencies
+council-types = {version = "0.1.0", default-features = false, path = "../pallets/system-types/council"}
+pallet-council = {version = "0.1.0", default-features = false, path = "../pallets/council"}
 pallet-proposal = {version = "0.1.0", default-features = false, path = "../pallets/proposal"}
+pallet-referendum = {version = "0.1.0", default-featurs = false, path = "../pallets/referendum"}
 pallet-template = {version = "4.0.0-dev", default-features = false, path = "../pallets/template"}
+proposal-types = {version = "0.1.0", default-featurs = false, path = "../pallets/system-types/proposal"}
 [build-dependencies]
 substrate-wasm-builder = {version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"}
 
@@ -81,6 +85,9 @@ std = [
   "pallet-randomness-collective-flip/std",
   "pallet-sudo/std",
   "pallet-template/std",
+  "proposal-types/std",
+  "pallet-proposal/std",
+  "pallet-referendum/std",
   "pallet-timestamp/std",
   "pallet-transaction-payment-rpc-runtime-api/std",
   "pallet-transaction-payment/std",
