--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -55,6 +55,7 @@ pallet-proposal = {version = "0.1.0", default-features = false, path = "../palle
 pallet-referendum = {version = "0.1.0", default-featurs = false, path = "../pallets/referendum"}
 pallet-template = {version = "4.0.0-dev", default-features = false, path = "../pallets/template"}
 proposal-types = {version = "0.1.0", default-featurs = false, path = "../pallets/system-types/proposal"}
+referendum-types = {version = "0.1.0", default-features = false, path = "../pallets/system-types/referendum"}
 [build-dependencies]
 substrate-wasm-builder = {version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26"}
 
