--- a/pallets/system-types/referendum/Cargo.toml
+++ b/pallets/system-types/referendum/Cargo.toml
@@ -12,11 +12,12 @@ codec = {package = "parity-scale-codec", version = "3.0.0", default-features = f
 frame-support = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
 frame-system = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
 scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}
+sp-io = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
 sp-runtime = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
 sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27"}
+
 [dev-dependencies]
 sp-core = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
-sp-io = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
 
 [features]
 default = ["std"]
@@ -26,4 +27,5 @@ std = [
   "frame-support/std",
   "frame-system/std",
   "sp-std/std",
+  "sp-io/std",
 ]
