--- a/pallets/referendum/Cargo.toml
+++ b/pallets/referendum/Cargo.toml
@@ -15,6 +15,7 @@ num-traits = {version = "0.2.15", default-features = false}
 pallet-math = {path = "../math", default-features = false}
 pallet-proposal = {path = "../proposal", default-features = false, optional = true, version = "0.1.0"}
 proposal-types = {default-features = false, version = "0.1.0", path = "../system-types/proposal"}
+referendum-types = {default-features = false, version = "0.1.0", path = "../system-types/referendum"}
 scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}
 sp-runtime = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
 sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27"}
