--- a/pallets/system-types/referendum/Cargo.toml
+++ b/pallets/system-types/referendum/Cargo.toml
@@ -12,6 +12,7 @@ codec = {package = "parity-scale-codec", version = "3.0.0", default-features = f
 frame-support = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
 frame-system = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
 scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}
+serde = {version = "1.0.136", features = ["derive"], optional = true}
 sp-io = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
 sp-runtime = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
 sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27"}
@@ -28,4 +29,5 @@ std = [
   "frame-system/std",
   "sp-std/std",
   "sp-io/std",
+  "serde",
 ]
