--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -50,11 +50,11 @@ hex-literal = {version = "0.3.4", optional = true}
 
 # Local Dependencies
 collective-types = {version = "0.1.0", default-features = false, path = "../pallets/system-types/collective"}
-# pallet-collective = {version = "0.1.0", default-features = false, path = "../pallets/collective"}
-# pallet-proposal = {version = "0.1.0", default-features = false, path = "../pallets/proposal"}
-# pallet-referendum = {version = "0.1.0", default-featurs = false, path = "../pallets/referendum"}
-# proposal-types = {version = "0.1.0", default-featurs = false, path = "../pallets/system-types/proposal"}
-# referendum-types = {version = "0.1.0", default-features = false, path = "../pallets/system-types/referendum"}
+pallet-collective = {version = "0.1.0", default-features = false, path = "../pallets/collective"}
+pallet-proposal = {version = "0.1.0", default-features = false, path = "../pallets/proposal"}
+pallet-referendum = {version = "0.1.0", default-featurs = false, path = "../pallets/referendum"}
+proposal-types = {version = "0.1.0", default-featurs = false, path = "../pallets/system-types/proposal"}
+referendum-types = {version = "0.1.0", default-features = false, path = "../pallets/system-types/referendum"}
 
 [build-dependencies]
 substrate-wasm-builder = {version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28"}
