--- a/pallets/math/Cargo.toml
+++ b/pallets/math/Cargo.toml
@@ -6,8 +6,10 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#frame-support = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27"}
-#sp-arithmetic = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27"}
 sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27"}
 
 [dev-dependencies]
+
+[features]
+default = ["std"]
+std = ["sp-runtime/std"]
