--- a/pallets/referendum/Cargo.toml
+++ b/pallets/referendum/Cargo.toml
@@ -13,7 +13,8 @@ frame-support = {version = "4.0.0-dev", default-features = false, git = "https:/
 frame-system = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
 num-traits = {version = "0.2.15", default-features = false}
 pallet-math = {path = "../math", default-features = false}
-pallet-proposal = {path = "../proposal", default-features = false, optional = true, version = "0.1.0"}
+
+collective-types = {default-features = false, version = "0.1.0", path = "../system-types/collective"}
 proposal-types = {default-features = false, version = "0.1.0", path = "../system-types/proposal"}
 referendum-types = {default-features = false, version = "0.1.0", path = "../system-types/referendum"}
 scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}
@@ -22,6 +23,7 @@ sp-std = {git = "https://github.com/paritytech/substrate", default-features = fa
 
 [dev-dependencies]
 pallet-balances = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27"}
+pallet-proposal = {path = "../proposal", default-features = false, version = "0.1.0"}
 sp-core = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
 sp-io = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
 
@@ -35,4 +37,5 @@ std = [
   "frame-system/std",
   "sp-std/std",
   "pallet-proposal/std",
+  "collective-types/std",
 ]
