--- a/pallets/proposal/Cargo.toml
+++ b/pallets/proposal/Cargo.toml
@@ -12,6 +12,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
   "derive",
 ]}
+collective-types = {default-features = false, version = "0.1.0", path = "../system-types/collective"}
 frame-support = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
 frame-system = {version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
 num-traits = {version = "0.2.15", default-features = false}
@@ -23,7 +24,7 @@ sp-runtime = {default-features = false, version = "6.0.0", git = "https://github
 sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27"}
 [dev-dependencies]
 pallet-balances = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27"}
-
+pallet-collective = {path = "../collective", default-features = false, version = "0.1.0"}
 sp-io = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
 
 [features]
@@ -36,5 +37,6 @@ std = [
   "frame-support/std",
   "proposal-types/std",
   "frame-system/std",
+  "collective-types/std",
   "sp-std/std",
 ]
