--- a/pallets/referendum/Cargo.toml
+++ b/pallets/referendum/Cargo.toml
@@ -23,6 +23,7 @@ sp-std = {git = "https://github.com/paritytech/substrate", default-features = fa
 
 [dev-dependencies]
 pallet-balances = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27"}
+pallet-collective = {path = "../collective", default-features = false, version = "0.1.0"}
 pallet-proposal = {path = "../proposal", default-features = false, version = "0.1.0"}
 sp-core = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
 sp-io = {default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27"}
@@ -37,5 +38,6 @@ std = [
   "frame-system/std",
   "sp-std/std",
   "pallet-proposal/std",
+  "pallet-collective/std",
   "collective-types/std",
 ]
